[package]
name = "adoptium_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
tokio = { version = "1.18.2", features = ["full"] }
serde_qs = "0.9.2"
strum = { version = "0.24.0", features = ["derive"] }
strum_macros = "0.24.0"
thiserror = "1.0.31"
async-trait = "0.1.53"
chrono = { version = "0.4.19", optional = true }
log = "0.4.17"
[dependencies.reqwest]
version = "0.11.10"
features = ["json"]
[features]
time_converter=["dep:chrono"]