[package]
name = "adoptium_api"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
serde_json = "1"
serde_qs = "0.12"
strum = { version = "0.26", features = ["derive"] }
thiserror.workspace = true

chrono.workspace = true
reqwest.workspace = true
url = "2"
tracing.workspace = true
derive_more.workspace = true
derive_builder.workspace = true
[dev-dependencies]
tabled = "0.15"
tokio = { version = "1", features = ["full"] }
