[package]
name = "adoptiummd"
version = "0.1.0"
edition = "2021"
categories = ["command-line-utilities"]
description = "An Adoptium Linux Installer and Manager"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "adoptiummd"
path = "bin/main.rs"

[dependencies]
serde = { version = "1.0.137", features = ["derive"] }
toml = "0.5.9"

adoptium_api = { path = "../adoptium_api", features = ["time_converter"] }
chrono = "0.4.19"
indicatif = "0.16.2"

colored = "2.0.0"
whoami = "1.2.1"
clap = { version = "3.1.18", features = ["derive"] }
tokio = { version = "1.18.2" }
tokio-stream = { version = "0.1.8", features = ["fs"] }
log = { version = "0.4.17", features = ["kv_unstable_serde", "kv_unstable_std", "kv_unstable"] }
nitro_log = { git = "https://github.com/wyatt-herkamp/nitro_log.git", features = ["colored"] }
tempfile = "3.3.0"
async-compression = { version = "0.3.14", features = ["gzip", "tokio"] }
tokio-tar = "0.3.0"
futures-util = "0.3.21"
tabled = { version = "0.7.0", features = ["color"] }
thiserror = "1.0.31"
reqwest = { version = "0.11.10", features = ["stream"] }
# Used for exposing the values for Reqwest
url = "2.2.2"
bytes = "1.1.0"
[features]
mock_commands = []
